--- a/sass/variables/_general.scss
+++ b/sass/variables/_general.scss
@@ -66,6 +66,7 @@ body.active .to-light-mode {
 .h1 {
   font-size: 86px;
   font-weight: bold;
+  line-height: 1.19;
 
   @media (max-width: 1120px) {
     font-size: 46px;
