--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body.active .to-light-mode {
 .h1 {
 	font-size: 86px;
 	font-weight: bold;
+	line-height: 1.19;
 }
 
 @media (max-width: 1120px) {
@@ -1503,7 +1504,7 @@ body.active .cards:not(.cards--simple-borders) .cards__card:nth-child(6)::after 
 }
 
 .hero {
-	padding-block: 117px 0;
+	padding-block: 115px 0;
 	color: var(--color-black);
 }
 
@@ -1515,6 +1516,7 @@ body.active .cards:not(.cards--simple-borders) .cards__card:nth-child(6)::after 
 
 .hero .tagline {
 	margin-bottom: 20px;
+	line-height: 12px;
 }
 
 .hero h1 + p {
@@ -1525,7 +1527,7 @@ body.active .cards:not(.cards--simple-borders) .cards__card:nth-child(6)::after 
 }
 
 .hero .site-brand {
-	margin-bottom: 270px;
+	margin-bottom: 250px;
 }
 
 @media (max-width: 1440px) {
@@ -1558,7 +1560,7 @@ body.active .cards:not(.cards--simple-borders) .cards__card:nth-child(6)::after 
 }
 
 .logos .container {
-	padding-block: 270px;
+	padding-block: 250px 270px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
